--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,14 @@
   font-family: 'Poppins', sans-seirf;
 }
 
+.wrapper{
+  width: 100%;
+}
+
 body{
-  min-height: 100dvh;
+  /*min-height: 100%;*/
+  height: 100%;
+  width: 100%;
   background: linear-gradient(#36DE4E, #30C4FF);
 }
 header{
@@ -22,14 +28,14 @@ header{
   align-items: center;
   z-index: 10000;
 }
-header .logo{
+/* header .logo{
   color: #fff;
   font-weight: 700;
   text-decoration: none;
   font-size: 2em;
   text-transform: uppercase;
   letter-spacing: 2px;
-}
+} */
 header ul{
   display: flex;
   justify-content: center;
@@ -77,18 +83,36 @@ section{
   color: #e0e0e0;
   font-family: 'Poppins', sans-seirf;
   white-space: nowrap;
+  font-size: 2vw;
   z-index: 9;
-  transform: translateY(-40px);
+  transform: translateY(-35px);
 }
 #btn{
   position: absolute;
   display: inline-block;
-  width: 200px;
-  height: 50px;
+  width: 160px;
+  height: 40px;
   z-index: 9;
-  transform: translateY(40px);
+  transform: translateY(50px);
+}
+#btn.btn-outline-success {
+  --bs-btn-color: #FE6F25;
+  --bs-btn-border-color: #FE6F25;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #FE6F25;
+  --bs-btn-hover-border-color: #FE6F25;
+  --bs-btn-focus-shadow-rgb: 25,135,84;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #FE6F25;
+  --bs-btn-active-border-color: #FE6F25;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #FE6F25;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #FE6F25;
+  --bs-gradient: none;
 }
 footer {
+  width: 100%;
   background-color: #2B3035;
   color: #6b6b6b;
   padding: 20px;
